add basic counter features

--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 
-    <title></title>
+  <title></title>
 </head>
 
 <body>
-    @@include("./html/header.html")
-    @@include("./html/footer.html")
 
-    <script src="js/app.min.js"></script>
+  <main class="main">
+    @@include("./html/counter.html")
+  </main>
+
+  <script src="js/app.min.js"></script>
 </body>
 
 </html>
