--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 <body>
 
   <main class="main">
+    @@include("./html/header.html")
     @@include("./html/counter.html")
+    <!-- @@include("./html/dateForm.html") -->
   </main>
 
   <script src="js/app.min.js"></script>
