change adapt styles, rework git-hub link at svg sprite

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     @@include("./html/header.html")
     <div class="container">   
       @@include("./html/counter.html")
-      @@include("./html/selectDate.html")
+      @@include("./html/select-date.html")
     </div>
   </main>
 
