new desine, adding header and header bar

--- a/src/html/counter.html
+++ b/src/html/counter.html
@@ -1,5 +1,5 @@
 <div class="counter">
-  <div class="counter__elem">
+  <!-- <div class="counter__elem">
 
     <div class="circle">
       <svg class="circle__svg" viewBox="0 0 100 100">
@@ -49,6 +49,6 @@
 
     <span id="seconds">00</span>
     <span class="counter__desc-seconds">секунд</span>
-  </div>
+  </div> -->
 
 </div>
