--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,66 @@
 <header class="header">
-  <h1 class="header__title">До конца дня осталось</h1>
+
+  <div class="header__tabs">
+    <div class="panel-elem">
+      <img class="panel-elem__img" id="header-bar" src="./img/panel-icon/bars.svg" alt="bar">
+    </div>
+
+    <ul class="tabs">
+      <li class="tabs__elem" data-type-content="timer">
+        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <button class="tabs__btn">
+          Таймер обратного отсчета
+        </button>
+      </li>
+
+      <li class="tabs__elem" data-type-content="">
+        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <button class="tabs__btn">
+          Таймер обратного 
+        </button>
+      </li>
+
+      <li class="tabs__elem" data-type-content="">
+        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <button class="tabs__btn">
+          Таймер обратного от
+        </button>
+      </li>
+
+      <li class="tabs__elem" data-type-content="">
+        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <button class="tabs__btn">
+          Таймер обратного отсч
+        </button>
+      </li>
+
+
+      <li class="tabs__elem" data-type-content="">
+        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <button class="tabs__btn">
+          Таймер обратного отсче
+        </button>
+      </li>
+
+
+      <li class="tabs__elem" data-type-content="">
+        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <button class="tabs__btn">
+          Таймер обратного отсчет
+        </button>
+      </li>
+    </ul>
+  </div>
+
+  <h1 class="header__title">Таймер обратного отсчета</h1>
+
+  <div class="header__mode">
+    <div class="panel-elem">
+<!-- <img class="panel-elem__img" id="dark-mode" src="./img/mode-icon/sun-mode.svg" alt="dark-light"> -->
+      <img class="panel-elem__img" id="sun-mode" src="./img/panel-icon/dark-mode.svg" alt="dark-light">
+    </div>
+  
+  </div>
+
+  <hr class="horizont-line">
 </header>
