--- a/src/html/select-date.html
+++ b/src/html/select-date.html
@@ -1,4 +1,4 @@
-<div class="select-date">
+<!-- <div class="select-date">
   <input class="select-date__inp" type="datetime-local" id="localdate" name="date"/>
   <button class="select-date__btn">установить дату</button>
-</div>
+</div> -->
