--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,9 @@
 </head>
 
 <body>
-
-  <main class="main">
     @@include("./html/header.html")
-    <div class="container">   
-      @@include("./html/counter.html")
-      @@include("./html/select-date.html")
-    </div>
-  </main>
+    <!-- @@include("./html/counter.html") -->
 
-  @@include("./html/git-links.html")
 
   <script src="js/app.min.js"></script>
 </body>
