--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,63 +1,84 @@
 <header class="header">
 
   <div class="header__tabs">
-    <div class="panel-elem">
-      <img class="panel-elem__img" id="header-bar" src="./img/panel-icon/bars.svg" alt="bar">
+    <div class="header-btn">
+      <svg class="header-btn__svg">
+        <use xlink:href="./img/header-btn/header-btn-sprite.svg#bar"></use>
+      </svg>
     </div>
 
     <ul class="tabs">
       <li class="tabs__elem" data-type-content="timer">
-        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+        <span>        
+          <svg class="tabs__svg">
+            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+          </svg>
+        </span>
+
+
         <button class="tabs__btn">
           Таймер обратного отсчета
         </button>
       </li>
 
-      <li class="tabs__elem" data-type-content="">
-        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+      <li class="tabs__elem" data-type-content="timer">
+        <span>        
+          <svg class="tabs__svg">
+            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+          </svg>
+        </span>
+
         <button class="tabs__btn">
-          Таймер обратного 
+          Таймер обратного отсчета
         </button>
       </li>
 
-      <li class="tabs__elem" data-type-content="">
-        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+      <li class="tabs__elem" data-type-content="timer">
+        <span>        
+          <svg class="tabs__svg">
+            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+          </svg>
+        </span>
+
         <button class="tabs__btn">
-          Таймер обратного от
+          Таймер обратного отсчета
         </button>
       </li>
 
-      <li class="tabs__elem" data-type-content="">
-        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
+      <li class="tabs__elem" data-type-content="timer">
+        <span>        
+          <svg class="tabs__svg">
+            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+          </svg>
+        </span>
+
         <button class="tabs__btn">
-          Таймер обратного отсч
+          Таймер обратного отсчета
         </button>
       </li>
+      
+      <li class="tabs__elem" data-type-content="timer">
+        <span>        
+          <svg class="tabs__svg">
+            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+          </svg>
+        </span>
 
-
-      <li class="tabs__elem" data-type-content="">
-        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
         <button class="tabs__btn">
-          Таймер обратного отсче
+          Таймер обратного отсчета
         </button>
       </li>
-
-
-      <li class="tabs__elem" data-type-content="">
-        <img class="tabs__img" src="./img/panel-icon/dark-mode.svg" alt="">
-        <button class="tabs__btn">
-          Таймер обратного отсчет
-        </button>
-      </li>
+      
     </ul>
   </div>
 
   <h1 class="header__title">Таймер обратного отсчета</h1>
 
   <div class="header__mode">
-    <div class="panel-elem">
-<!-- <img class="panel-elem__img" id="dark-mode" src="./img/mode-icon/sun-mode.svg" alt="dark-light"> -->
-      <img class="panel-elem__img" id="sun-mode" src="./img/panel-icon/dark-mode.svg" alt="dark-light">
+    <div class="header-btn">
+      <svg class="header-btn__svg">
+        <use xlink:href="./img/header-btn/header-btn-sprite.svg#light-theme"></use>
+      </svg>
     </div>
   
   </div>
