adding save theme in localStorage and select her at first start

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,12 +3,12 @@
   <div class="header__tabs">
     <div class="header-btn">
       <svg class="header-btn__svg">
-        <use xlink:href="./img/header-btn/header-btn-sprite.svg#bar"></use>
+        <use xlink:href="./img/header-btn/header-btn-sprite.svg#bar-open"></use>
       </svg>
     </div>
 
     <ul class="tabs">
-      <li class="tabs__elem" data-type-content="timer">
+      <li class="tabs__elem tabs__elem-active" data-type-content="counter">
         <span>        
           <svg class="tabs__svg">
             <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
@@ -21,51 +21,51 @@
         </button>
       </li>
 
-      <li class="tabs__elem" data-type-content="timer">
+      <li class="tabs__elem" data-type-content="gen-pass">
         <span>        
           <svg class="tabs__svg">
-            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+            <use xlink:href="./img/tabs/tabs-sprite.svg#gen-pass"></use>
           </svg>
         </span>
 
         <button class="tabs__btn">
-          Таймер обратного отсчета
+          Генератор пароля
         </button>
       </li>
 
-      <li class="tabs__elem" data-type-content="timer">
+      <li class="tabs__elem" data-type-content="calc">
         <span>        
           <svg class="tabs__svg">
-            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+            <use xlink:href="./img/tabs/tabs-sprite.svg#calc"></use>
           </svg>
         </span>
 
         <button class="tabs__btn">
-          Таймер обратного отсчета
+          Калькулятор
         </button>
       </li>
 
-      <li class="tabs__elem" data-type-content="timer">
+      <li class="tabs__elem" data-type-content="todo-list">
         <span>        
           <svg class="tabs__svg">
-            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+            <use xlink:href="./img/tabs/tabs-sprite.svg#todo-list"></use>
           </svg>
         </span>
 
         <button class="tabs__btn">
-          Таймер обратного отсчета
+          TODO лист
         </button>
       </li>
       
-      <li class="tabs__elem" data-type-content="timer">
+      <li class="tabs__elem" data-type-content="stopwatch">
         <span>        
           <svg class="tabs__svg">
-            <use xlink:href="./img/tabs/tabs-sprite.svg#counter"></use>
+            <use xlink:href="./img/tabs/tabs-sprite.svg#stopwatch"></use>
           </svg>
         </span>
 
         <button class="tabs__btn">
-          Таймер обратного отсчета
+          Секундомер
         </button>
       </li>
       
