--- a/src/html/main-content/counter.html
+++ b/src/html/main-content/counter.html
@@ -1,5 +1,5 @@
-<div class="counter">
-  <!-- <div class="counter__elem">
+<div class="counter" data-type-content="counter">
+ <!-- <div class="counter__elem">
 
     <div class="circle">
       <svg class="circle__svg" viewBox="0 0 100 100">
