--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
 
 <body>
     @@include("./html/header.html")
+    <div class="main-content">
+      @@include("./html/main-content/counter.html")
+      @@include("./html/main-content/gen-pass.html")
+      @@include("./html/main-content/calc.html")
+      @@include("./html/main-content/todo-list.html")
+      @@include("./html/main-content/stopwatch.html")
+    </div>
     <!-- @@include("./html/counter.html") -->
 
 
