adding coundown section

--- a/src/html/main-content/gen-pass.html
+++ b/src/html/main-content/gen-pass.html
@@ -1,4 +1,4 @@
-<div class="gen-pass" data-type-content="gen-pass">
+<section class="gen-pass" data-type-content="gen-pass">
 
 
-</div>
+</section>
