--- a/src/html/main-content/stopwatch.html
+++ b/src/html/main-content/stopwatch.html
@@ -1,4 +1,4 @@
-<div class="stopwatch" data-type-content="stopwatch">
+<section class="stopwatch" data-type-content="stopwatch">
 
 
-</div>
+</section>
