--- a/src/html/main-content/todo-list.html
+++ b/src/html/main-content/todo-list.html
@@ -1,4 +1,4 @@
-<div class="todo-list" data-type-content="todo-list">
+<section class="todo-list" data-type-content="todo-list">
 
 
-</div>
+</section>
