add styles and html for calc and refactor styles coundown and TODO list

--- a/src/html/main-content/counter.html
+++ b/src/html/main-content/counter.html
@@ -12,6 +12,8 @@
     </button>
 
     <ul class="dates-list__list">
+
+      <!-- Не расскоментировать -->
       <!-- <li class="dates-list__item">
 
         <button class="dates-list__btn-remove main-btn" title="удалить дату">
