--- a/src/html/main-content/calc.html
+++ b/src/html/main-content/calc.html
@@ -1,6 +1,33 @@
 <section class="calc" data-type-content="calc">
 
+  <div class="calc__wrapper">
+    <div class="calc__display">
+      <textarea readonly class="calc__history-operation"></textarea>
+      <input readonly dir="rtl" type="text" class="calc__operation">
+    </div>
 
+    <div class="calc__controls">
+      <button class="calc__btn" id="reset">C</button>
+      <button class="calc__btn calc__btn-operation" id="divide">&divide;</button>
+      <button class="calc__btn calc__btn-operation" id="multiply">&times;</button>
+      <button class="calc__btn calc__btn-operation" id="delete"></button>
+      <button class="calc__btn" id="7">7</button>
+      <button class="calc__btn" id="8">8</button>
+      <button class="calc__btn" id="9">9</button>
+      <button class="calc__btn calc__btn-operation" id="minus">-</button>
+      <button class="calc__btn" id="4">4</button>
+      <button class="calc__btn" id="5">5</button>
+      <button class="calc__btn" id="6">6</button>
+      <button class="calc__btn calc__btn-operation" id="plus">+</button>
+      <button class="calc__btn" id="1">1</button>
+      <button class="calc__btn" id="2">2</button>
+      <button class="calc__btn" id="3">3</button>   
+      <button class="calc__btn" id="percent">%</button>
+      <button class="calc__btn" id="zero">0</button>
+      <button class="calc__btn" id="dot">.</button>
+      <button class="calc__btn calc__btn-operation" id="equals"> = </button>
+    </div>
+  </div>
 
 
 </section>
