adding scripts for calc

--- a/src/html/main-content/calc.html
+++ b/src/html/main-content/calc.html
@@ -3,7 +3,7 @@
   <div class="calc__wrapper">
     <div class="calc__display">
       <textarea readonly class="calc__history-operation"></textarea>
-      <input readonly dir="rtl" type="text" class="calc__operation">
+      <input readonly  type="text" class="calc__operation">
     </div>
 
     <div class="calc__controls">
@@ -28,6 +28,5 @@
       <button class="calc__btn calc__btn-operation" id="equals"> = </button>
     </div>
   </div>
-
 
 </section>
