adding markup and styles stopwatch section

--- a/src/html/main-content/stopwatch.html
+++ b/src/html/main-content/stopwatch.html
@@ -1,4 +1,47 @@
 <section class="stopwatch" data-type-content="stopwatch">
+  <div class="display">
+    <div class="display__minutes">
+      00
+    </div>
+    <span class="display__double-dot">:</span>
+
+    <div class="display__seconds">
+      00
+    </div>
+    <span class="display__double-dot display__double-dot_milisecond">:</span>
+
+    <div class="display__miliseconds">
+      00
+    </div>
+  </div>
+
+  <div class="btns">
+    <button class="main-btn main-btn_stopwatch" id="stopwatch-start">СТАРТ</button>
+    <button class="main-btn main-btn_stopwatch" id="stopwatch-stop">СТОП</button>
+    <button class="main-btn main-btn_stopwatch" id="stopwatch-circle">КРУГ</button>
+  </div>
+
+  <div class="circle-list">
+
+    <div class="circle-list__circle">
+      <div class="circle-list__num">1</div>
+      <span>круг</span>
+      <div class="circle-list__time">00:00:00</div>
+    </div>
+
+    <div class="circle-list__circle">
+      <div class="circle-list__num">1</div>
+      <span>круг</span>
+      <div class="circle-list__time">00:00:00</div>
+    </div>
+
+    <div class="circle-list__circle">
+      <div class="circle-list__num">1</div>
+      <span>круг</span>
+      <div class="circle-list__time">00:00:00</div>
+    </div>
+
+  </div>
 
 
 </section>
