adding scripts for stopwatch

--- a/src/html/main-content/stopwatch.html
+++ b/src/html/main-content/stopwatch.html
@@ -22,26 +22,11 @@
   </div>
 
   <div class="circle-list">
-
-    <div class="circle-list__circle">
+    <!-- <div class="circle-list__circle">
       <div class="circle-list__num">1</div>
       <span>круг</span>
       <div class="circle-list__time">00:00:00</div>
-    </div>
-
-    <div class="circle-list__circle">
-      <div class="circle-list__num">1</div>
-      <span>круг</span>
-      <div class="circle-list__time">00:00:00</div>
-    </div>
-
-    <div class="circle-list__circle">
-      <div class="circle-list__num">1</div>
-      <span>круг</span>
-      <div class="circle-list__time">00:00:00</div>
-    </div>
-
+    </div> -->
   </div>
-
 
 </section>
