adding section and scripts genQr

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -67,6 +67,18 @@
           Секундомер
         </button>
       </li>
+
+      <li class="tabs__elem" data-type-content="qr-code">
+        <span>        
+          <svg class="tabs__svg">
+            <use xlink:href="./img/tabs/tabs-sprite.svg#qr-code"></use>
+          </svg>
+        </span>
+
+        <button class="tabs__btn">
+          QR-code генератор
+        </button>
+      </li>
       
     </ul>
   </div>
