--- a/src/html/main-content/gen-pass.html
+++ b/src/html/main-content/gen-pass.html
@@ -7,7 +7,7 @@
   <div class="gen-pass__options">
 
     <fieldset class="complexity">
-      <legend>Выберите сложность пароля</legend>
+      <legend>Сложность</legend>
       <div class="complexity__wrapper">
         <label>
           <input name="complexity" data-type="easy" type="radio">
