--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       @@include("./html/main-content/calc.html")
       @@include("./html/main-content/todo-list.html")
       @@include("./html/main-content/stopwatch.html")
+      @@include("./html/main-content/qr-code.html")
     </div>
     <!-- @@include("./html/counter.html") -->
 
